made mobile and tablet responsive

--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Design</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -55,13 +55,13 @@
       <table>
         <tr>
           <td>
-            <div class = "card">
+            <div class="card">
               <img 
                 src = "./images/basics-image.png" 
                 alt = "image for basics course"
               >
-              <div class = "card-content">
-                <h3> Learn the basics</h3>
+              <div class ="card-content">
+                <h3> Learn the basic principles</h3>
                 <p> 3 month course </p>
                 <a href="../contactPage/contactPage.html">
                   Start now 
@@ -70,12 +70,12 @@
             </div>
           </td>
           <td>
-            <div class = "card">
+            <div class="card">
               <img 
-                src = "images/advanced-image.png" 
-                alt = "image for advanced course"
+                src="images/advanced-image.png" 
+                alt="image for advanced course"
               >
-              <div class = "card-content">
+              <div class ="card-content">
                 <h3> Learn to be advanced </h3>
                 <p> 6 month course </p>
                 <a href="../contactPage/contactPage.html"> 
@@ -85,12 +85,12 @@
             </div>
           </td>
           <td>
-            <div class = "card">
+            <div class="card">
               <img 
-                src = "./images/expert-image.png" 
-                alt = "image for expert course"
+                src="./images/expert-image.png" 
+                alt="image for expert course"
               >
-              <div class = "card-content">
+              <div class ="card-content">
                 <h3> Learn to be an expert </h3>
                 <p> 10 month course </p>
                 <a href="../contactPage/contactPage.html"> 
@@ -114,8 +114,8 @@
                 <div class="flip-card-front">
                   <img 
                     src="./images/figma-image.png" 
-                    alt="logo for figma" 
-                    style="width:150px;height:150px;"
+                    alt="logo for figma"
+                    class="logo-flip-card" 
                   >
                 </div>
                 <div class="flip-card-back">
@@ -135,7 +135,7 @@
                   <img 
                     src="./images/photoshop-image.png" 
                     alt="logo for photoshop" 
-                    style="width:150px;height:150px;"
+                    class="logo-flip-card" 
                   >
                 </div>
                 <div class="flip-card-back">
@@ -154,8 +154,8 @@
                 <div class="flip-card-front">
                   <img 
                     src="./images/illustrator-image.png" 
-                    alt="logo for illustrator" 
-                    style="width:150px;height:150px;"
+                    alt="logo for illustrator"
+                    class="logo-flip-card"  
                   >
                 </div>
                 <div class="flip-card-back">
@@ -175,7 +175,7 @@
                   <img 
                     src="./images/html-image.png" 
                     alt="logo for html" 
-                    style="width:150px;height:150px;"
+                    class="logo-flip-card" 
                   >
                 </div>
                 <div class="flip-card-back">
@@ -194,8 +194,8 @@
                 <div class="flip-card-front">
                   <img 
                     src="./images/css-image.png" 
-                    alt="logo for css" 
-                    style="width:150px;height:150px;"
+                    alt="logo for css"
+                    class="logo-flip-card"  
                   >
                 </div>
                 <div class="flip-card-back">
@@ -214,8 +214,8 @@
                 <div class="flip-card-front">
                   <img 
                     src="./images/aftereffects-image.png" 
-                    alt="logo for after effects" 
-                    style="width:150px;height:150px;"
+                    alt="logo for after effects"
+                    class="logo-flip-card"  
                   >
                 </div>
                 <div class="flip-card-back">
@@ -235,7 +235,7 @@
                   <img 
                     src="./images/media-image.png" 
                     alt="logo for media encoder" 
-                    style="width:150px;height:150px;"
+                    class="logo-flip-card" 
                   >
                 </div>
                 <div class="flip-card-back">
