responsive frontend page

--- a/pages/frontend/frontend.html
+++ b/pages/frontend/frontend.html
@@ -18,7 +18,7 @@
             class="logo-image"
             src="./images/Code Elite.png"
             alt="logo of code elite academy"
-          >
+          />
         </a>
       </picture>
       <nav id="navigation">
@@ -33,10 +33,10 @@
       <div>
         <h1 class="main-heading">Frontend Web Developement</h1>
         <p class="frontend-defination">
-          Front-end web development is the development<br>
-          of the graphical user interface of a website,<br>
+          Front-end web development is the development<br />
+          of the graphical user interface of a website,<br />
           through the use of <span>HTML, CSS,</span> and
-          <span>JavaScript</span>,<br>
+          <span>JavaScript</span>,<br />
           so that users can view and interact with that website.
         </p>
         <a href="../contactPage/contactPage.html"><button>Apply Now</button></a>
@@ -47,100 +47,58 @@
           class="frontend-image"
           src="./images/main-image.png"
           alt="coding website sample image"
-        >
+        />
       </picture>
     </section>
+    <div class="language-heading"><h2>Technologies used in Frontend</h2></div>
 
-    <section id="links-section">
-      <p id="tech-title">
-        Technologies used by Frontend Developers
-      </p>
-      <table>
-        <tr>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    class="language-image" 
-                    src="./images/html.png" 
-                    alt="html icon image"
-                  >
-                  <p class="language-description">
-                    The HyperText Markup Language or HTML is the standard markup language
-                    for documents designed to be displayed in a web browser. It defines
-                    the meaning and structure of web content.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h2>HTML</h2> 
-                  <p>Click to see more information</p> 
-                  <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
-            </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    class="language-image"
-                    src="./images/css.png" 
-                    alt="css icon image" 
-                  >
-                  <p class="language-description">
-                    Cascading Style Sheets is a style sheet language used for describing
-                    the presentation of a document written in a markup language such as
-                    HTML or XML. CSS is a cornerstone technology of the World Wide Web
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h2>CSS</h2> 
-                  <p>Click to see more information</p> 
-                  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
-            </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img
-                    class="language-image"
-                    src="./images/js-logo.png" 
-                    alt="javascript icon image" 
-                  >
-                  <p class="language-description">
-                    JavaScript, often abbreviated as JS, is a programming language that is
-                    one of the core technologies of the World Wide Web, alongside HTML and
-                    CSS. As of 2023, 98.7% of websites use JavaScript on the client side
-                    for webpage behavior, often incorporating third-party libraries.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h2>JavaScript</h2> 
-                  <p>Click to see more information</p> 
-                  <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
-            </div>
-          </td>
-        </tr>
-      </table>
+    <section id="detail-section">
+      <section class="language-detail">
+        <img
+          class="language-image"
+          src="./images/html.png"
+          alt="html icon image"
+        />
+        <h2 class="language-title">HTML</h2>
+        <p class="language-description">
+          The HyperText Markup Language or HTML is the standard markup language
+          for documents designed to be displayed in a web browser. It defines
+          the meaning and structure of web content.
+        </p>
+      </section>
+      <section class="language-detail">
+        <img
+          class="language-image"
+          src="./images/css.png"
+          alt="css icon image"
+        />
+        <h2 class="language-title">CSS</h2>
+        <p class="language-description">
+          Cascading Style Sheets is a style sheet language used for describing
+          the presentation of a document written in a markup language such as
+          HTML or XML. CSS is a cornerstone technology of the World Wide Web
+        </p>
+      </section>
+      <section class="language-detail">
+        <img
+          class="language-image"
+          src="./images/js-logo.png"
+          alt="javascript icon image"
+        />
+        <h2 class="language-title">JavaScript</h2>
+        <p class="language-description">
+          JavaScript, often abbreviated as JS, is a programming language that is
+          one of the core technologies of the World Wide Web, alongside HTML and
+          CSS. As of 2023, 98.7% of websites use JavaScript on the client side
+          for webpage behavior, often incorporating third-party libraries.
+        </p>
+      </section>
     </section>
     <section class="testimonials">
       <p class="testimonial-text">
-        "Not only do you leave with a new skill set under your belt,<br>
-        you meet a significant amount of super talented people.<br>
-        This course in Frontend web developement is the best<br>
+        "Not only do you leave with a new skill set under your belt,<br />
+        you meet a significant amount of super talented people.<br />
+        This course in Frontend web developement is the best<br />
         choice I have ever made."
       </p>
       <p class="testimonial-alumni">-Faheem Hassan</p>
