finished responsive design

--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -61,7 +61,7 @@
                 alt = "image for basics course"
               >
               <div class ="card-content">
-                <h3> Learn the basic principles</h3>
+                <h3> Learn the basic</h3>
                 <p> 3 month course </p>
                 <a href="../contactPage/contactPage.html">
                   Start now 
@@ -76,7 +76,7 @@
                 alt="image for advanced course"
               >
               <div class ="card-content">
-                <h3> Learn to be advanced </h3>
+                <h3> Learn more staff to be advanced </h3>
                 <p> 6 month course </p>
                 <a href="../contactPage/contactPage.html"> 
                   Start now 
@@ -91,7 +91,7 @@
                 alt="image for expert course"
               >
               <div class ="card-content">
-                <h3> Learn to be an expert </h3>
+                <h3> Become an expert </h3>
                 <p> 10 month course </p>
                 <a href="../contactPage/contactPage.html"> 
                   Start now 
