--- a/pages/frontend/frontend.html
+++ b/pages/frontend/frontend.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
@@ -18,7 +18,7 @@
             class="logo-image"
             src="./images/Code Elite.png"
             alt="logo of code elite academy"
-          />
+          >
         </a>
       </picture>
       <nav id="navigation">
@@ -33,8 +33,8 @@
       <div>
         <h1 class="main-heading">Frontend Web Developement</h1>
         <p class="frontend-defination">
-          Front-end web development is the development<br />
-          of the graphical user interface of a website,<br />
+          Front-end web development is the development<br>
+          of the graphical user interface of a website,<br>
           through the use of <span>HTML, CSS,</span> and
           <span>JavaScript</span>,<br />
           so that users can view and interact with that website.
@@ -47,7 +47,7 @@
           class="frontend-image"
           src="./images/main-image.png"
           alt="coding website sample image"
-        />
+        >
       </picture>
     </section>
     <div class="language-heading"><h2>Technologies used in Frontend</h2></div>
@@ -58,7 +58,7 @@
           class="language-image"
           src="./images/html.png"
           alt="html icon image"
-        />
+        >
         <h2 class="language-title">HTML</h2>
         <p class="language-description">
           The HyperText Markup Language or HTML is the standard markup language
@@ -71,7 +71,7 @@
           class="language-image"
           src="./images/css.png"
           alt="css icon image"
-        />
+        >
         <h2 class="language-title">CSS</h2>
         <p class="language-description">
           Cascading Style Sheets is a style sheet language used for describing
@@ -84,7 +84,7 @@
           class="language-image"
           src="./images/js-logo.png"
           alt="javascript icon image"
-        />
+        >
         <h2 class="language-title">JavaScript</h2>
         <p class="language-description">
           JavaScript, often abbreviated as JS, is a programming language that is
