--- a/pages/contactPage/contactPage.html
+++ b/pages/contactPage/contactPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -86,11 +86,19 @@
                 Front-end
             </label>
             <label>
-              <input type="radio" name="devweb" value="backend">
+              <input 
+                type="radio" 
+                name="devweb" 
+                value="backend"
+              >
                 Back-end
             </label>
             <label>
-              <input type="radio" name="devweb" value="web design">
+              <input 
+                type="radio" 
+                name="devweb" 
+                value="web design"
+              >
                 Web Design
             </label>
           </div>
@@ -115,7 +123,6 @@
         >
       </a>
     </section>
-
     <footer>Copyright ©</footer>
   </body>
 </html>
