--- a/pages/backend/backend.html
+++ b/pages/backend/backend.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Backend</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -14,7 +14,7 @@
             class="logo-image"
             src="./images/Code Elite.png"
             alt="logo of code elite academy"
-          />
+          >
         </a>
       </picture>
       <nav id="navigation">
@@ -30,7 +30,7 @@
       <div class="image-link">
         <div>
           <h2 id="whylearn-text">Why to learn Backend Development</h2>
-          <br />
+          <br>
           <p id="backend-text">
             Backend Development is everything that happens behind the curtains.
             Where does the data go? What makes the website run? How does it know
@@ -60,7 +60,7 @@
               <img
                 src="./images/basics-image.png"
                 alt="image for basics course"
-              />
+              >
               <div class="card-content">
                 <h3>Learn the basics</h3>
                 <p>3 month course</p>
@@ -73,7 +73,7 @@
               <img
                 src="images/advanced-image.png"
                 alt="image for advanced course"
-              />
+              >
               <div class="card-content">
                 <h3>Learn more advanced stuff</h3>
                 <p>6 month course</p>
@@ -86,7 +86,7 @@
               <img
                 src="./images/expert-image.png"
                 alt="image for expert course"
-              />
+              >
               <div class="card-content">
                 <h3>Become an expert</h3>
                 <p>10 month course</p>
@@ -109,7 +109,7 @@
                     src="./images/Javascript-logo.png"
                     alt="logo for javascript"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>Javascript</h1>
@@ -127,7 +127,7 @@
                     src="./images/CSharp.png"
                     alt="logo for CSharp"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>C Sharp</h1>
@@ -150,7 +150,7 @@
                     src="./images/CPlusPlus.png"
                     alt="logo for C Plus Plus"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>C++</h1>
@@ -173,7 +173,7 @@
                     src="./images/python.png"
                     alt="logo for python"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>Python</h1>
@@ -196,7 +196,7 @@
                     src="./images/java.png"
                     alt="logo for css"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>Java</h1>
@@ -219,7 +219,7 @@
                     src="./images/ruby.png"
                     alt="logo for ruby"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>Ruby</h1>
@@ -242,7 +242,7 @@
                     src="./images/go (1).png"
                     alt="logo for Go"
                     class="image-flip-card"
-                  />
+                  >
                 </div>
                 <div class="flip-card-back">
                   <h1>Go</h1>
