--- a/pages/frontend/frontend.html
+++ b/pages/frontend/frontend.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend</title>
     <link
@@ -51,7 +51,6 @@
       </picture>
     </section>
     <div class="language-heading"><h2>Technologies used in Frontend</h2></div>
-
     <section id="detail-section">
       <section class="language-detail">
         <img
