--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -25,10 +25,14 @@
         <a href="../../pages/contactPage/contactPage.html">Contact us</a>
       </nav>
     </header>
-    <h1 class="webdesign-main-text">UX/UI Web Design</h1>
-    <section id="introduction-section">
-      <div class="image-link">
-        <div>
+    <main>
+      <section class="text-header">
+        <h1 class="webdesign-main-text">UX/UI Web Design</h1>
+        <h2 class="imagination-text">YOUR CREATIVITY IS ENDLESS!</h2>
+      </section>
+      <section class="up-line"></section>
+      <section id="introduction-section">
+        <section class="image-link">
           <h2 id="whylearn-text">Why to learn web design</h2>
           <br>
           <p id="webdesign-text">
@@ -36,221 +40,189 @@
             data science, graphic design, or motion graphics. Aspiring entrepreneurs, artists, and activists can all make 
             use of the digital landscape to help their ideas reach a larger audience.
           </p>
-        </div>
-        <picture>
-          <img
-            class="image-introduction"
-            src="./images/image-introduction.jpg"
-            alt="image for introduction section"
-          >
-        </picture>
-      </div>
-    </section>
-    <section>
-      <p id="motivate-text">
-        Decide today to be stronger tomorrow and nothing will be able to stop you. 
-      </p>
-    </section>
-    <section id="course-section">
-      <table>
-        <tr>
-          <td>
-            <div class="card">
-              <img 
-                src = "./images/basics-image.png" 
-                alt = "image for basics course"
-              >
-              <div class ="card-content">
-                <h3> Learn the basic</h3>
-                <p> 3 month course </p>
-                <a href="../contactPage/contactPage.html">
-                  Start now 
+          <div class="card">
+            <img 
+              src = "./images/basics-image.png" 
+              alt = "image for basics course"
+            >
+            <div class ="card-content">
+              <h3> Learn the basic</h3>
+              <p> 3 month course </p>
+              <a href="../contactPage/contactPage.html">
+                Start now 
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <img 
+              src="images/advanced-image.png" 
+              alt="image for advanced course"
+            >
+            <div class ="card-content">
+              <h3> Learn to be advanced </h3>
+              <p> 6 month course </p>
+              <a href="../contactPage/contactPage.html"> 
+                Start now 
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <img 
+              src="./images/expert-image.png" 
+              alt="image for expert course"
+            >
+            <div class ="card-content">
+              <h3> Become an expert </h3>
+              <p> 10 month course </p>
+              <a href="../contactPage/contactPage.html"> 
+                Start now 
+              </a>
+            </div>
+          </div>
+        </section>
+        <section class="tech-logo">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/figma-image.png" 
+                  alt="logo for figma"
+                  class="logo-flip-card" 
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>Figma</h4> 
+                <p>Click to see more information</p> 
+                <a href="https://www.figma.com/" target="_blank">
+                  Go
                 </a>
               </div>
             </div>
-          </td>
-          <td>
-            <div class="card">
-              <img 
-                src="images/advanced-image.png" 
-                alt="image for advanced course"
-              >
-              <div class ="card-content">
-                <h3> Learn more staff to be advanced </h3>
-                <p> 6 month course </p>
-                <a href="../contactPage/contactPage.html"> 
-                  Start now 
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/photoshop-image.png" 
+                  alt="logo for photoshop" 
+                  class="logo-flip-card" 
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>Photoshop</h1> 
+                <p>Click to see more information</p> 
+                <a href="https://www.adobe.com/products/photoshop.html?promoid=RBS7NL7F&mv=other" target="_blank">
+                  Go
                 </a>
               </div>
             </div>
-          </td>
-          <td>
-            <div class="card">
-              <img 
-                src="./images/expert-image.png" 
-                alt="image for expert course"
-              >
-              <div class ="card-content">
-                <h3> Become an expert </h3>
-                <p> 10 month course </p>
-                <a href="../contactPage/contactPage.html"> 
-                  Start now 
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/illustrator-image.png" 
+                  alt="logo for illustrator"
+                  class="logo-flip-card"  
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>Illustrator</h4> 
+                <p>Click to see more information</p> 
+                <a href="https://www.adobe.com/products/illustrator.html" target="_blank">
+                  Go
                 </a>
               </div>
             </div>
-          </td>
-        </tr>
-      </table>
-    </section>
-    <section id="links-section">
-      <p id="tech-title">
-        Technologies used by web designers
-      </p>
-      <table>
-        <tr>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/figma-image.png" 
-                    alt="logo for figma"
-                    class="logo-flip-card" 
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>Figma</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://www.figma.com/" target="_blank">
-                    Go
-                  </a>
-                </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/html-image.png" 
+                  alt="logo for html" 
+                  class="logo-flip-card" 
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>HTML</h4> 
+                <p>Click to see more information</p> 
+                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">
+                  Go
+                </a>
               </div>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/photoshop-image.png" 
-                    alt="logo for photoshop" 
-                    class="logo-flip-card" 
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>Photoshop</h1> 
-                  <p>Click to see more information</p> 
-                  <a href="https://www.adobe.com/products/photoshop.html?promoid=RBS7NL7F&mv=other" target="_blank">
-                    Go
-                  </a>
-                </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/css-image.png" 
+                  alt="logo for css"
+                  class="logo-flip-card"  
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>CSS</h4> 
+                <p>Click to see more information</p> 
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                  Go
+                </a>
               </div>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/illustrator-image.png" 
-                    alt="logo for illustrator"
-                    class="logo-flip-card"  
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>Illustrator</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://www.adobe.com/products/illustrator.html" target="_blank">
-                    Go
-                  </a>
-                </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img 
+                  src="./images/aftereffects-image.png" 
+                  alt="logo for after effects"
+                  class="logo-flip-card"  
+                >
+              </div>
+              <div class="flip-card-back">
+                <h4>After Effects</h4> 
+                <p>Click to see more information</p> 
+                <a href="https://www.adobe.com/products/aftereffects.html" target="_blank">
+                  Go
+                </a>
               </div>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/html-image.png" 
-                    alt="logo for html" 
-                    class="logo-flip-card" 
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>HTML</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
+          </div>
+        </section>
+        <section class="explanation-section">
+          <div class="card-expl">
+            <div class ="card-content">
+              <h3>Learn the basic</h3>
+              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
+                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
+              </p>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/css-image.png" 
-                    alt="logo for css"
-                    class="logo-flip-card"  
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>CSS</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
+          </div>
+          <div class="card-expl numb-2">
+            <div class ="card-content">
+              <h3>Learn to be advanced</h3>
+              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
+                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
+              </p>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/aftereffects-image.png" 
-                    alt="logo for after effects"
-                    class="logo-flip-card"  
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>After Effects</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://www.adobe.com/products/aftereffects.html" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
+          </div>
+          <div class="card-expl numb-2">
+            <div class ="card-content">
+              <h3>Become an expert</h3>
+              <p> Entering the web programming world can be difficult for brand-new people. So many concepts sound strange and become problematic at the writing stage. How to write: software developer or front-end developer? Maybe a front-end developer, or rather a front-end software engineer? However, the most common is the hyphen entry. Front-end developer—the person responsible for the visual part of the application (what we see, we = users of the site).<br>
+                  Usually, the front-end developer works with a graphic designer (web designer) who provides the graphic design. Often, front-end developers have the opportunity to work with a UX designer who proposes and creates a prototype of interactions that will take place on the websites. The role of front-end developers is to put it all together. It is popularly said that a front-end developer is tasked with cutting a graphic design—dividing the design into smaller parts and coding (HTML and CSS) into websites that users.
+              </p>
             </div>
-          </td>
-          <td>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img 
-                    src="./images/media-image.png" 
-                    alt="logo for media encoder" 
-                    class="logo-flip-card" 
-                  >
-                </div>
-                <div class="flip-card-back">
-                  <h4>Media Encoder</h4> 
-                  <p>Click to see more information</p> 
-                  <a href="https://www.adobe.com/ca/products/media-encoder.html" target="_blank">
-                    Go
-                  </a>
-                </div>
-              </div>
-            </div>
-          </td>
-        </tr>
-      </table>
-    </section>
+          </div>   
+      </section>
+      <section>
+        <div class="down-line"></div>
+        <p id="motivate-text">
+          Decide today to be stronger tomorrow and nothing will be able to stop you. 
+        </p>
+      </section>
+    </main>
     <footer>Copyright ©</footer>
   </body>
 </html>
